--- a/mySvc.yml
+++ b/mySvc.yml
@@ -4,6 +4,7 @@ metadata:
   name: myjavaapp-svc
   labels:
      app: myjavaapp
+     version: 2.6.2
 spec:
   type: NodePort
   ports:
@@ -12,5 +13,5 @@ spec:
     protocol: TCP
   selector:
      app: myjavaapp
-  
+     version: 2.6.2
 
