--- a/myDeploy.yml
+++ b/myDeploy.yml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: myjavaapp
   labels:
-    app: myjavaapp
+    app: myjavaapp-deploy
 spec:
   replicas: 3
   selector:
